[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/decisionNode.gd" type="Script" id=1]

[node name="decisionNode" type="GraphNode"]
margin_left = 58.3015
margin_top = 27.436
margin_right = 513.302
margin_bottom = 230.436
title = "decisionNode"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color( 1, 1, 1, 1 )
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color( 1, 1, 1, 1 )
slot/7/left_enabled = false
slot/7/left_type = 0
slot/7/left_color = Color( 1, 1, 1, 1 )
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="LabelD1" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 439.0
margin_bottom = 38.0
text = "Decision 1"
align = 2

[node name="LabelD2" type="Label" parent="."]
margin_left = 16.0
margin_top = 38.0
margin_right = 439.0
margin_bottom = 52.0
text = "Decision 2"
align = 2

[node name="messageLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 53.0
margin_right = 439.0
margin_bottom = 67.0
text = "Message"
align = 1

[node name="message" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 68.0
margin_right = 439.0
margin_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 99.0
margin_right = 439.0
margin_bottom = 113.0
text = "Decision1"
align = 1

[node name="Decision1" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 114.0
margin_right = 439.0
margin_bottom = 134.0
rect_min_size = Vector2( 400, 20 )

[node name="Label2" type="Label" parent="."]
margin_left = 16.0
margin_top = 135.0
margin_right = 439.0
margin_bottom = 149.0
text = "Decision2"
align = 1

[node name="Decision2" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 150.0
margin_right = 439.0
margin_bottom = 170.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 400, 20 )
[connection signal="close_request" from="." to="." method="_on_decisionNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_decisionNode_resize_request"]
